syntax = "proto3";

package category;

option go_package = "server/internal/infrastructure/messaging/dto";

message Category {
  uint32 id = 1;
  string name = 2;
  uint32 parent_id = 3;
  string icon_name = 4;
  string icon_color = 5;
  string icon_background = 6;
  bool fixed_costs = 7;
  double ordering = 8;
}

message GetAllCategoriesRequest {
}

message GetAllCategoriesResponse {
  repeated Category categories = 1;
}

message CreateCategoryRequest {
  string name = 1;
  uint32 parent_id = 2;
  string icon_name = 3;
  string icon_color = 4;
  string icon_background = 5;
  bool fixed_costs = 6;
  double ordering = 8;
}

message CreateCategoryResponse {
  uint32 id = 1;
}

message UpdateCategoryFields {
  optional string name = 1;
  bool update_parent_id = 2;
  optional uint32 parent_id = 3;
  optional string icon_name = 4;
  optional string icon_color = 5;
  optional string icon_background = 6;
  optional bool fixed_costs = 7;
  optional double ordering = 8;
}

message UpdateCategoryRequest {
  uint32 id = 1;
  UpdateCategoryFields fields = 2;
}

message UpdateCategoryResponse {

}

service CategoryService {
  rpc GetAllCategories (GetAllCategoriesRequest) returns (GetAllCategoriesResponse);
  rpc CreateCategory (CreateCategoryRequest) returns (CreateCategoryResponse);
  rpc UpdateCategory (UpdateCategoryRequest) returns (UpdateCategoryResponse);
}